# delepwn

./: .coverage  .gitignore  MANIFEST.in  Microsoft.PowerShell_profile.ps1  README.md  argument_parser.py  calendar_manager.py  calendarlist.py  calendarphish.py  checkdelegation.py  command_handler.py  drive.py  drive_manager.py  emails.csv  main.py  pyproject.toml  requirements.txt  sharefolders.py
config/: settings.py
delepwn/: main.py  setup.py
delepwn/cli/: handler.py  parser.py
delepwn/config/: oauth_scopes.txt  settings.py
delepwn/core/: delegator.py  domain_users.py  enumerator.py  key_manager.py  oauth_enumerator.py
delepwn/services/: admin.py  calendar.py  drive.py  gmail.py
delepwn/utils/: api.py  output.py
examples/: example_calendarphish.yaml
src/: checkdelegation.py  domain_users_enum.py  gcp_sa_enum.py  oauth_scope_enumerator.py  private_key_creator.py
src/delepwn/: __init__.py  checkdelegation.py  domain_users_enum.py  gcp_sa_enum.py  main.py  oauth_scope_enumerator.py  private_key_creator.py
src/delepwn/utils/: api_utils.py  custom_credentials.py  file_utils.py
src/delepwn/utils/parsers/: argument_parser.py  command_handler.py
src/managers/: admin_manager.py  calendar_manager.py  drive_manager.py
tools/: sharefile.py
utils/: file_utils.py
utils/parsers/: argument_parser.py  command_handler.py
