[tool.poetry]
name = "delepwn"
version = "0.1.0"
description = ""
authors = ["walt <wg2159@nyu.edu>"]
readme = "README.md"
packages = [
    { include = "delepwn", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "0.4.6"
google-api-python-client = "2.123.0"
protobuf = "5.29.0"
pyyaml = "6.0.2"
requests = "2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
delepwn = "main:main"