[tool.poetry]
name = "delepwn"
version = "0.1.0"
description = "Security assessment tool for Google Workspace Domain-Wide Delegation"
authors = ["walt <wg2159@nyu.edu>"]
readme = "README.md"
packages = [
    { include = "delepwn" }
]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "0.4.6"
google-api-python-client = "2.123.0"
protobuf = "5.29.0"
pyyaml = "6.0.2"
requests = "2.32.3"
google-auth = "^2.0.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
delepwn = "delepwn.main:main"